devicetree: Pin direction small fix
Temporary solution to improve the direction depending on the pin
function.

--- a/src/components/dts/DeviceTree.css
+++ b/src/components/dts/DeviceTree.css
@@ -5,6 +5,7 @@
 }
 
 .device-tree textarea {
+  tab-size: 3;
   min-height: 200px;
   margin: 10px 40px;
   display: block;
